# streamlit-pydantic

./: .editorconfig  .gitignore  CONTRIBUTING.md  Makefile  Pipfile  README.md  build.py  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-drafter.yml  release.yml
.github/ISSUE_TEMPLATE/: 01_bug-report.yml  02_feature-request.yml  03_documentation.yml  config.yml
.github/actions/build-environment/: Dockerfile
.github/workflows/: build-pipeline.yml  ci.yml  release-pipeline.yml  release.yml  require-labels.yml
docs/: README.md  streamlit_pydantic.renderer.md  streamlit_pydantic.schema_utils.md  streamlit_pydantic.settings.md  streamlit_pydantic.streamlit_utils.md  streamlit_pydantic.types.md  streamlit_pydantic.ui_renderer.md
examples/: complex_defaults.py  complex_disabled_showcase.py  complex_instance_model.py  complex_nested_model.py  complex_showcase.py  custom_form.py  data_validation.py  dataclass_form.py  demo_app.py  expanders.py  form_input.py  input_output.py  multiple_forms.py  optional_fields.py  overwrite_streamlit_args.py  render_input.py  render_input_ui.py  render_output.py  simple_form.py  simple_input.py  streamlit_settings.py  union_field.py  union_field_discriminator.py
playground/: playground_app.py
playground/.streamlit/: secrets.toml
src/streamlit_pydantic/: __init__.py  _about.py  annotations.py  schema_utils.py  settings.py  ui_renderer.py
tests/: test_renderer.py
